# Relay

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
docs/: math.md
examples/: epoch_lifecycle.py  twelve_labs_video_demo.py
src/pkg/llamaindex/: __init__.py  llm.py  retriever.py
src/pkg/twelvelabs/: __init__.py  client.py  embed.py  errors.py  ingest_video.py  segments.py  session.py
src/priv/: auth.md  ebpf_observability.md  kafka.md  nats_migration.md  video_bigbuckbunny.md  video_sintel.md  wasm_edge.md
src/relay/: __init__.py  cli.py  collections.py  config.py  diff.py  embeddings.py  epochs.py  ingest.py  merkle.py  models.py  query.py  supersede.py  verify.py
tests/: __init__.py  conftest.py  test_config.py  test_embeddings.py  test_integration.py  test_llama_integration.py  test_merkle.py  test_models.py  test_twelvelabs.py
