[project]
name = "relay"
version = "0.1.0"
description = "Cryptographically Versioned Semantic Memory with Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.14.1",
    "ruff>=0.15.13",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/relay"]
