[project]
name = "relay"
version = "0.1.0"
description = "Cryptographically Versioned Semantic Memory with Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.18.0",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.0",
    "typer>=0.25.1",
    "numpy>=2.0.0",
    "pydantic-settings>=2.14.1",
    "ruff>=0.15.13",
]

[project.scripts]
relay = "relay.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/relay"]
